--- a/frontend/src/pages/EventsDash/MyEvents/RecommendedEvents/RecommendedEvents.scss
+++ b/frontend/src/pages/EventsDash/MyEvents/RecommendedEvents/RecommendedEvents.scss
@@ -7,11 +7,13 @@
     display: flex;
     gap: 10px;
     width: 100%;
-    align-items: flex-start;
+    align-items: stretch;
   }
 
   .recommended-events-container {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     .explore-events-button {
       background-color: var(--primary);
       color: white;
@@ -71,8 +73,6 @@
   .recommended-room {
     display: flex;
     width: 25%;
-    height: 100%;
-    min-height: 300px;
     justify-content: flex-start;
   }
 }
